# comet

./: home.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  ChatHomepage.tsx  ChatSettings.tsx  ColorModeIconDropdown.tsx  Message.tsx  MessageView.tsx  Messages.tsx  SignIn.tsx  SignUp.tsx  WebSocket.tsx  main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/customizations/: surfaces.ts
